# claude-code-utils

./: .gitignore  README.md  install.sh  pyproject.toml  run_dashboard.sh
.streamlit/: config.toml
claude_code_analytics/: .env.example  __init__.py  cli.py  config.py
claude_code_analytics.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claude_code_analytics/prompts/: agent_usage.md  decisions.md
claude_code_analytics/scripts/: __init__.py  analyze_session.py  create_database.py  create_fts_index.py  demo_embeddings.py  import_conversations.py  search_fts.py  test_incremental_import.py
claude_code_analytics/streamlit_app/: README.md  app.py  requirements.txt
claude_code_analytics/streamlit_app/pages/: analysis.py  analytics.py  browser.py  conversation.py  import_data.py  search.py
claude_code_analytics/streamlit_app/services/: analysis_service.py  database_service.py  llm_providers.py
docs/: PACKAGING.md  RESTRUCTURING_PLAN.md  deep-linking-implementation.md  homebrew-packaging.md  mcp-server-analytics.md  packaging-considerations.md  platform-compatibility.md  search-feature-requirements.md
examples/: settings.json
hooks/: export-conversation.sh
prompts/: README.md  errors.md  metadata.yaml
scripts/: analyze_session.py  analyze_session_decisions.py  create_database.py  create_fts_index.py  embed_conversations.py  import_conversations.py  pretty-print-transcript.py  search_conversations.py
streamlit_app/: app.py
streamlit_app/models/: __init__.py  analysis_models.py  database_models.py
streamlit_app/pages/: about.py  analysis.py  analytics.py  browser.py  conversation.py  home.py  import_data.py  search.py
streamlit_app/services/: __init__.py  analysis_service.py  database_service.py  llm_providers.py
